<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="eu.laramartin.schoolsupplies.MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:src="@drawable/coffee_cup_mug_desk"
        android:scaleType="centerInside"/>


    <TextView
        android:id="@+id/description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/description"
        android:textStyle="italic"
        style="@style/margin" />

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:text="@string/company_name"
        style="@style/title"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/ic_schedule"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_query_builder_black_24dp"
            android:tint="@color/accent"
            style="@style/margin"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/ic_schedule"
            android:layout_toRightOf="@+id/ic_schedule"
            android:layout_toEndOf="@+id/ic_schedule"
            android:text="@string/open_hours"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/ic_map"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_place_black_24dp"
            android:tint="@color/accent"
            style="@style/margin"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/ic_map"
            android:layout_toRightOf="@+id/ic_map"
            android:layout_toEndOf="@+id/ic_map"
            android:text="@string/address"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/ic_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_call_black_24dp"
            android:tint="@color/accent"
            style="@style/margin"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/ic_phone"
            android:layout_toRightOf="@+id/ic_phone"
            android:layout_toEndOf="@+id/ic_phone"
            android:text="@string/phone"/>

    </RelativeLayout>

</LinearLayout>
